apps/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-jellyfin
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8096
      targetPort: 8096
