apps/jellyfin/slice.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: external-jellyfin-slice
  labels:
    kubernetes.io/service-name: external-jellyfin
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 8096
endpoints:
  - addresses:
      - "192.168.88.213"
    conditions:
      ready: true
